manifests/monitoring/promstack/base/httproute-grafana.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
  - name: tls
    group: gateway.networking.k8s.io	
    kind: Gateway
    namespace: cilium
    sectionName: https
  hostnames: []
  rules:
  - backendRefs:
    - name: grafana
      group: ""	
      namespace: monitoring
      kind: Service
      port: 80
      weight: 1
    matches:	
    - path:	
        type: PathPrefix	
        value: /
