manifests/monitoring/promstack/base/httproute-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hostnames: []
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tls
      namespace: cilium
      sectionName: https
  rules:
  - backendRefs:
      - group: ""
        kind: Service
        name: promstack-prometheus
        namespace: monitoring
        port: 9090
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
